--- a/001_Introduction/001_FirstApp/CMakeLists.txt
+++ b/001_Introduction/001_FirstApp/CMakeLists.txt
@@ -3,4 +3,5 @@ project(001_FirstApp)
 
 set(CMAKE_CXX_STANDARD 14)
 
+list(APPEND _sources stdafx.cpp stdafx.h targetver.h)
 add_executable(001_FirstApp main.cpp)
